@@ -1,3 +1,7 @@
+17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
+	- handle files larger than 1tb fixed
+	- use double instead float internally
+
 09. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- option for display file content with external viewer added (#982070)
 	- display result progress/count on find dialog table label added (#3496359)
